# SeedLang-V2

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  jest.config.cjs  package-lock.json  package.json  repl.js  seed.config.json  seedlint.config.json  tsconfig.json
.github/workflows/: game-bench-trend.yml
bench/: clc-ci-gate.js  compile_bench.js  compile_clc_bench.js  interp_vs_native_loop.js  run.js  runtime_ast_vs_vm.js
bench/game/: README.md  ci-gate.js  hotspots.js  run.js  trend-report.js
bench/industry/: bench_industry.seed  bench_industry_clc.seed  run.js
bench/seedlang/: bench_array.seed  (+10 more)
data/: model-pricing.json
docs/: ACAE_Paper.md  AI_PROMPT.md  AI_QUICK_START.md  ARCHITECTURE_MAP.md  BOOTSTRAP_P0_BASELINE.md  CHEATSHEET.md  CLC_WIN32_PLAN.txt  CLI_REFACTOR_PLAN.md  DEBUGGER.md  DESKTOP_FRONTEND_SUPPORT_DRAFT.md  LANGUAGE_SPEC.md  LANGUAGE_SPEC_REFACTOR_DRAFT.md  PERFORMANCE_VERIFICATION_CHECKLIST.md  SYNTAX_MENTAL_MODEL.md  VM_BOOTSTRAP_SPLIT_PLAN.md  VM_SENTINEL_SUITE_PLAN.md  VM_TEST_TRIAGE_TEMPLATE.md
examples/: README.md
scripts/: seedlang-init.js
src/: api.js  cli.ts  index.ts  token-counter.js
src/rust/cargo/: Cargo.toml
src/rust/cargo/src/: lib.rs
tests/: _force_flush.js  test-suite.js
tools/: build-particle-bench-win32.js  compile-bench-clc.js  open-stability-preview.js  resolve-gcc.js  seed-doc.js  seed-format.js  seed-lint.js  seed-pm.js  seed-web-compile.js  verify-clc-win32.js  verify-particle-bench-consistency.js  watch-dungeon-win32.js
(+765 files in other folders)
