[package]
name = "seedlang_rust"
version = "0.1.0"
edition = "2021"
description = "SeedLang Rust Native Module - High Performance Extensions"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []
wasm = []
native = []
